updated publications, seminar tweaks

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,444 @@
+@article {MR3657159,
+    AUTHOR = {Das, Soumya and Pal, Ritwik},
+     TITLE = {Jacobi forms and differential operators: odd weights},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {179},
+      YEAR = {2017},
+     PAGES = {113--125},
+      ISSN = {0022-314X},
+   MRCLASS = {11F50 (11F11 11F25)},
+  MRNUMBER = {3657159},
+       DOI = {10.1016/j.jnt.2017.03.021},
+       URL = {http://dx.doi.org/10.1016/j.jnt.2017.03.021},
+}
+
+@article {MR3651974,
+    AUTHOR = {Aiyappan, S. and Nandakumaran, A. K.},
+     TITLE = {Optimal control problem in a domain with branched structure
+              and homogenization},
+   JOURNAL = {Math. Methods Appl. Sci.},
+  FJOURNAL = {Mathematical Methods in the Applied Sciences},
+    VOLUME = {40},
+      YEAR = {2017},
+    NUMBER = {8},
+     PAGES = {3173--3189},
+      ISSN = {0170-4214},
+   MRCLASS = {49J45 (35B27 35K20)},
+  MRNUMBER = {3651974},
+       DOI = {10.1002/mma.4231},
+       URL = {http://dx.doi.org/10.1002/mma.4231},
+}
+
+@article {MR3651413,
+    AUTHOR = {Yadav, Avinash Chand and Manchanda, Kaustubh and Ramaswamy,
+              Ramakrishna},
+     TITLE = {Emergent organization in a model market},
+   JOURNAL = {Phys. A},
+  FJOURNAL = {Physica A. Statistical Mechanics and its Applications},
+    VOLUME = {482},
+      YEAR = {2017},
+     PAGES = {118--126},
+      ISSN = {0378-4371},
+   MRCLASS = {91B24},
+  MRNUMBER = {3651413},
+       DOI = {10.1016/j.physa.2017.04.029},
+       URL = {http://dx.doi.org/10.1016/j.physa.2017.04.029},
+}
+
+@article {MR3650438,
+    AUTHOR = {Cui, Jintao and Gudi, Thirupathi},
+     TITLE = {Finite element approximation of a free boundary plasma
+              problem},
+   JOURNAL = {Adv. Comput. Math.},
+  FJOURNAL = {Advances in Computational Mathematics},
+    VOLUME = {43},
+      YEAR = {2017},
+    NUMBER = {3},
+     PAGES = {517--535},
+      ISSN = {1019-7168},
+   MRCLASS = {65N30 (49S05 65K10 65K15 65N15 82D10)},
+  MRNUMBER = {3650438},
+       DOI = {10.1007/s10444-016-9495-7},
+       URL = {http://dx.doi.org/10.1007/s10444-016-9495-7},
+}
+
+@article {MR3650386,
+    AUTHOR = {Biswas, Indranil and Seshadri, Harish},
+     TITLE = {Quot schemes and {R}icci semipositivity},
+   JOURNAL = {C. R. Math. Acad. Sci. Paris},
+  FJOURNAL = {Comptes Rendus Math\'ematique. Acad\'emie des Sciences. Paris},
+    VOLUME = {355},
+      YEAR = {2017},
+    NUMBER = {5},
+     PAGES = {577--581},
+      ISSN = {1631-073X},
+   MRCLASS = {53C56 (14H10 32Q20)},
+  MRNUMBER = {3650386},
+       DOI = {10.1016/j.crma.2017.03.012},
+       URL = {http://dx.doi.org/10.1016/j.crma.2017.03.012},
+}
+
+@article {MR3649340,
+    AUTHOR = {Bhattacharyya, Tirthankar and Sau, Haripada},
+     TITLE = {{$\Gamma$}-unitaries, dilation and a natural example},
+   JOURNAL = {Publ. Res. Inst. Math. Sci.},
+  FJOURNAL = {Publications of the Research Institute for Mathematical
+              Sciences},
+    VOLUME = {53},
+      YEAR = {2017},
+    NUMBER = {2},
+     PAGES = {261--285},
+      ISSN = {0034-5318},
+   MRCLASS = {47A20 (32A70 46E22)},
+  MRNUMBER = {3649340},
+       DOI = {10.4171/PRIMS/53-2-2},
+       URL = {http://dx.doi.org/10.4171/PRIMS/53-2-2},
+}
+
+@article {MR3646949,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {On some spectral spaces associated to tensor triangulated
+              categories},
+   JOURNAL = {Arch. Math. (Basel)},
+  FJOURNAL = {Archiv der Mathematik},
+    VOLUME = {108},
+      YEAR = {2017},
+    NUMBER = {6},
+     PAGES = {581--591},
+      ISSN = {0003-889X},
+   MRCLASS = {18E30 (06E15 13C60)},
+  MRNUMBER = {3646949},
+       DOI = {10.1007/s00013-017-1025-4},
+       URL = {http://dx.doi.org/10.1007/s00013-017-1025-4},
+}
+
+@article {MR3645574,
+    AUTHOR = {Ayyer, Arvind and Prasad, Amritanshu and Spallone, Steven},
+     TITLE = {Representations of symmetric groups with non-trivial
+              determinant},
+   JOURNAL = {J. Combin. Theory Ser. A},
+  FJOURNAL = {Journal of Combinatorial Theory. Series A},
+    VOLUME = {150},
+      YEAR = {2017},
+     PAGES = {208--232},
+      ISSN = {0097-3165},
+   MRCLASS = {05E10 (20C30)},
+  MRNUMBER = {3645574},
+MRREVIEWER = {Allan Berele},
+       DOI = {10.1016/j.jcta.2017.03.004},
+       URL = {http://dx.doi.org/10.1016/j.jcta.2017.03.004},
+}
+
+@article {MR3633161,
+    AUTHOR = {Bharali, Gautam and Biswas, Indranil and Schumacher, Georg},
+     TITLE = {A criterion for a degree-one holomorphic map to be a
+              biholomorphism},
+   JOURNAL = {Complex Var. Elliptic Equ.},
+  FJOURNAL = {Complex Variables and Elliptic Equations. An International
+              Journal},
+    VOLUME = {62},
+      YEAR = {2017},
+    NUMBER = {7},
+     PAGES = {914--918},
+      ISSN = {1747-6933},
+   MRCLASS = {32H02 (32J18)},
+  MRNUMBER = {3633161},
+MRREVIEWER = {Ji\v r\'\i  Lebl},
+       DOI = {10.1080/17476933.2016.1252342},
+       URL = {http://dx.doi.org/10.1080/17476933.2016.1252342},
+}
+
+@article {MR3629430,
+    AUTHOR = {Chan, Chun Lam and Fernandes, Winston and Kashyap, Navin and
+              Krishnapur, Manjunath},
+     TITLE = {Phase transitions for the uniform distribution in the pattern
+              maximum likelihood problem and its {B}ethe approximation},
+   JOURNAL = {SIAM J. Discrete Math.},
+  FJOURNAL = {SIAM Journal on Discrete Mathematics},
+    VOLUME = {31},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {597--631},
+      ISSN = {0895-4801},
+   MRCLASS = {68Q87},
+  MRNUMBER = {3629430},
+       DOI = {10.1137/15M1028819},
+       URL = {http://dx.doi.org/10.1137/15M1028819},
+}
+
+@article {MR3626589,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Monoidal semifilters and arrays of prime ideals},
+   JOURNAL = {Fund. Math.},
+  FJOURNAL = {Fundamenta Mathematicae},
+    VOLUME = {237},
+      YEAR = {2017},
+    NUMBER = {3},
+     PAGES = {281--296},
+      ISSN = {0016-2736},
+   MRCLASS = {13A15},
+  MRNUMBER = {3626589},
+       DOI = {10.4064/fm218-8-2016},
+       URL = {http://dx.doi.org/10.4064/fm218-8-2016},
+}
+
+@article {MR3625104,
+    AUTHOR = {Boggarapu, Pradeep and Thangavelu, S.},
+     TITLE = {On the chaotic behavior of the {D}unkl heat semigroup on
+              weighted {$L^p$} spaces},
+   JOURNAL = {Israel J. Math.},
+  FJOURNAL = {Israel Journal of Mathematics},
+    VOLUME = {217},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {57--92},
+      ISSN = {0021-2172},
+   MRCLASS = {47D06 (37D45)},
+  MRNUMBER = {3625104},
+       DOI = {10.1007/s11856-017-1438-6},
+       URL = {http://dx.doi.org/10.1007/s11856-017-1438-6},
+}
+
+@article {MR3624676,
+    AUTHOR = {Bhattacharjee, M. and Eschmeier, J. and Keshari, Dinesh K. and
+              Sarkar, Jaydeb},
+     TITLE = {Dilations, wandering subspaces, and inner functions},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {523},
+      YEAR = {2017},
+     PAGES = {263--280},
+      ISSN = {0024-3795},
+   MRCLASS = {47A13 (46E22 47A15 47A20 47A45)},
+  MRNUMBER = {3624676},
+       DOI = {10.1016/j.laa.2017.02.032},
+       URL = {http://dx.doi.org/10.1016/j.laa.2017.02.032},
+}
+
+@article {MR3620691,
+    AUTHOR = {Bharali, Gautam and Zimmer, Andrew},
+     TITLE = {Goldilocks domains, a weak notion of visibility, and
+              applications},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {310},
+      YEAR = {2017},
+     PAGES = {377--425},
+      ISSN = {0001-8708},
+   MRCLASS = {32F45 (32H40 32H50 32T25 53C23)},
+  MRNUMBER = {3620691},
+MRREVIEWER = {Feng Rong},
+       DOI = {10.1016/j.aim.2017.02.005},
+       URL = {http://dx.doi.org/10.1016/j.aim.2017.02.005},
+}
+
+@article {MR3619781,
+    AUTHOR = {Iyer, Srikanth and Vaze, Rahul},
+     TITLE = {Achieving nonzero information velocity in wireless networks},
+   JOURNAL = {Ann. Appl. Probab.},
+  FJOURNAL = {The Annals of Applied Probability},
+    VOLUME = {27},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {48--64},
+      ISSN = {1050-5164},
+   MRCLASS = {60D05 (05C82 60F15 60G55 60K30)},
+  MRNUMBER = {3619781},
+       DOI = {10.1214/16-AAP1196},
+       URL = {http://dx.doi.org/10.1214/16-AAP1196},
+}
+
+@article {MR3614013,
+    AUTHOR = {Chowdhury, Sudipto and Gudi, Thirupathi and Nandakumaran, A.
+              K.},
+     TITLE = {Error bounds for a {D}irichlet boundary control problem based
+              on energy spaces},
+   JOURNAL = {Math. Comp.},
+  FJOURNAL = {Mathematics of Computation},
+    VOLUME = {86},
+      YEAR = {2017},
+    NUMBER = {305},
+     PAGES = {1103--1126},
+      ISSN = {0025-5718},
+   MRCLASS = {49M25 (65K10 65N12 65N15 65N30)},
+  MRNUMBER = {3614013},
+MRREVIEWER = {Ernest Scheiber},
+       DOI = {10.1090/mcom/3125},
+       URL = {http://dx.doi.org/10.1090/mcom/3125},
+}
+
+@article {MR3608656,
+    AUTHOR = {Ji, Kui and Jiang, Chunlan and Keshari, Dinesh Kumar and
+              Misra, Gadadhar},
+     TITLE = {Rigidity of the flag structure for a class of
+              {C}owen-{D}ouglas operators},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {272},
+      YEAR = {2017},
+    NUMBER = {7},
+     PAGES = {2899--2932},
+      ISSN = {0022-1236},
+   MRCLASS = {47B32 (47B35)},
+  MRNUMBER = {3608656},
+MRREVIEWER = {Sanne ter Horst},
+       DOI = {10.1016/j.jfa.2016.12.019},
+       URL = {http://dx.doi.org/10.1016/j.jfa.2016.12.019},
+}
+
+@article {MR3606080,
+    AUTHOR = {Chowdhury, Sudipto and Gudi, Thirupathi},
+     TITLE = {A {$C^0$} interior penalty method for the {D}irichlet control
+              problem governed by biharmonic operator},
+   JOURNAL = {J. Comput. Appl. Math.},
+  FJOURNAL = {Journal of Computational and Applied Mathematics},
+    VOLUME = {317},
+      YEAR = {2017},
+     PAGES = {290--306},
+      ISSN = {0377-0427},
+   MRCLASS = {49M25 (65N15 65N30)},
+  MRNUMBER = {3606080},
+       DOI = {10.1016/j.cam.2016.12.005},
+       URL = {http://dx.doi.org/10.1016/j.cam.2016.12.005},
+}
+
+@article {MR3603524,
+    AUTHOR = {Adimurthi and Ratnakumar, P. K. and Sohani, Vijay Kumar},
+     TITLE = {A {H}ardy-{S}obolev inequality for the twisted {L}aplacian},
+   JOURNAL = {Proc. Roy. Soc. Edinburgh Sect. A},
+  FJOURNAL = {Proceedings of the Royal Society of Edinburgh. Section A.
+              Mathematics},
+    VOLUME = {147},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {1--23},
+      ISSN = {0308-2105},
+   MRCLASS = {35A23 (33C50 35A08 35J15)},
+  MRNUMBER = {3603524},
+       DOI = {10.1017/S0308210516000081},
+       URL = {http://dx.doi.org/10.1017/S0308210516000081},
+}
+
+@article {MR3602632,
+    AUTHOR = {Bhattacharyya, T. and Narayanan, E. K. and Sarkar, Jaydeb},
+     TITLE = {Analytic model of doubly commuting contractions},
+   JOURNAL = {Oper. Matrices},
+  FJOURNAL = {Operators and Matrices},
+    VOLUME = {11},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {101--113},
+      ISSN = {1846-3886},
+   MRCLASS = {30H10 (46E22 46M05 47A20 47A45 47B32 47B38)},
+  MRNUMBER = {3602632},
+       DOI = {10.7153/oam-11-07},
+       URL = {http://dx.doi.org/10.7153/oam-11-07},
+}
+
+@article {MR3599002,
+    AUTHOR = {Ayyer, Arvind and Schilling, Anne and Thi\'ery, Nicolas M.},
+     TITLE = {Spectral gap for random-to-random shuffling on linear
+              extensions},
+   JOURNAL = {Exp. Math.},
+  FJOURNAL = {Experimental Mathematics},
+    VOLUME = {26},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {22--30},
+      ISSN = {1058-6458},
+   MRCLASS = {60J10 (05C81 06A07)},
+  MRNUMBER = {3599002},
+       DOI = {10.1080/10586458.2015.1107868},
+       URL = {http://dx.doi.org/10.1080/10586458.2015.1107868},
+}
+
+@article {MR3588713,
+    AUTHOR = {Bagchi, Bhaskar and Datta, Basudeb and Spreer, Jonathan},
+     TITLE = {A characterization of tightly triangulated 3-manifolds},
+   JOURNAL = {European J. Combin.},
+  FJOURNAL = {European Journal of Combinatorics},
+    VOLUME = {61},
+      YEAR = {2017},
+     PAGES = {133--137},
+      ISSN = {0195-6698},
+   MRCLASS = {57Q15 (55U10)},
+  MRNUMBER = {3588713},
+MRREVIEWER = {Biplab Basak},
+       DOI = {10.1016/j.ejc.2016.10.005},
+       URL = {http://dx.doi.org/10.1016/j.ejc.2016.10.005},
+}
+
+@article {MR3584123,
+    AUTHOR = {Kundu, S. and Aggarwal, Manisha and Hazra, Somnath},
+     TITLE = {Finitely chainable and totally bounded metric spaces:
+              equivalent characterizations},
+   JOURNAL = {Topology Appl.},
+  FJOURNAL = {Topology and its Applications},
+    VOLUME = {216},
+      YEAR = {2017},
+     PAGES = {59--73},
+      ISSN = {0166-8641},
+   MRCLASS = {54-02 (26A15 26A16 54C30 54E40)},
+  MRNUMBER = {3584123},
+MRREVIEWER = {Zi Qiu Yun},
+       DOI = {10.1016/j.topol.2016.11.008},
+       URL = {http://dx.doi.org/10.1016/j.topol.2016.11.008},
+}
+
+@article {MR3576713,
+    AUTHOR = {Bennett, Nathan and Iyer, Srikanth K. and Jammalamadaka, S.
+              Rao},
+     TITLE = {Analysis of gamma and {W}eibull lifetime data under a general
+              censoring scheme and in the presence of covariates},
+   JOURNAL = {Comm. Statist. Theory Methods},
+  FJOURNAL = {Communications in Statistics. Theory and Methods},
+    VOLUME = {46},
+      YEAR = {2017},
+    NUMBER = {5},
+     PAGES = {2277--2289},
+      ISSN = {0361-0926},
+   MRCLASS = {62N01 (62G05 62N02 62N05 62P20)},
+  MRNUMBER = {3576713},
+       DOI = {10.1080/03610926.2015.1041981},
+       URL = {http://dx.doi.org/10.1080/03610926.2015.1041981},
+}
+
+@article {MR3572266,
+    AUTHOR = {Ayyer, Arvind and Linusson, Svante},
+     TITLE = {Correlations in the multispecies {TASEP} and a conjecture by
+              {L}am},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {369},
+      YEAR = {2017},
+    NUMBER = {2},
+     PAGES = {1097--1125},
+      ISSN = {0002-9947},
+   MRCLASS = {60K35 (05A05 05A17 20F55)},
+  MRNUMBER = {3572266},
+       DOI = {10.1090/tran/6806},
+       URL = {http://dx.doi.org/10.1090/tran/6806},
+}
+
+@article {MR3589750,
+    AUTHOR = {Prasad, Phoolan},
+     TITLE = {Kinematical conservation laws in a space of arbitrary
+              dimensions},
+   JOURNAL = {Indian J. Pure Appl. Math.},
+  FJOURNAL = {Indian Journal of Pure and Applied Mathematics},
+    VOLUME = {47},
+      YEAR = {2016},
+    NUMBER = {4},
+     PAGES = {641--653},
+      ISSN = {0019-5588},
+   MRCLASS = {35F20 (35A30 35F21 35L65 76L05)},
+  MRNUMBER = {3589750},
+       DOI = {10.1007/s13226-016-0197-0},
+       URL = {http://dx.doi.org/10.1007/s13226-016-0197-0},
+}
+	
+
 @article {MR3572350,
     AUTHOR = {Kabiraj, Arpan},
      TITLE = {Center of the {G}oldman {L}ie algebra},
