--- a/_all-courses/ma221.md
+++ b/_all-courses/ma221.md
@@ -1,6 +1,6 @@
 ---
 title: 'Analysis I : Real Analysis'
-code: MA 221
+code: Ma 221
 ---
 Construction of the field of real numbers and the least upper-bound property.
 Review of sets, countable & uncountable sets. Metric Spaces: topological
