--- a/_all-courses/ma222.md
+++ b/_all-courses/ma222.md
@@ -1,6 +1,6 @@
 ---
 title: 'ANALYSIS II: MEASURE AND INTEGRATION'
-code: MA 222
+code: Ma 222
 ---
 Construction of Lebesgue measure, Measurable functions, Lebesgue integration,
 Abstract measure and abstract integration, Monotone convergence theorem,
