--- a/_all-courses/ma223.md
+++ b/_all-courses/ma223.md
@@ -1,6 +1,6 @@
 ---
 title: Functional Analysis
-code: MA 223
+code: Ma 223
 ---
 Basic topological concepts, Metric spaces, Normed linear spaces, Banach spaces,
 Bounded linear functionals and dual spaces,Hahn-Banach  theorem. Bounded
