--- a/_all-courses/ma224.md
+++ b/_all-courses/ma224.md
@@ -1,6 +1,6 @@
 ---
 title: Complex Analysis
-code: MA 224
+code: Ma 224
 ---
 Complex numbers,  complex-analytic functions, Cauchy's integral formula,  power
 series, Liouville's theorem. The maximum-modulus theorem. Isolated
