--- a/_all-courses/ma229.md
+++ b/_all-courses/ma229.md
@@ -1,6 +1,6 @@
 ---
 title: Calculus on Manifolds
-code: MA 229
+code: Ma 229
 ---
 Functions of several variables, Directional derivatives and continuity, total
 derivative, mean value theorem for differentiable functions, Taylor's formula.
