--- a/_all-courses/ma241.md
+++ b/_all-courses/ma241.md
@@ -1,6 +1,6 @@
 ---
 title: Ordinary Differential Equations
-code: MA 241
+code: Ma 241
 ---
 Basics concepts:Introduction and examples through physical models, First and
 second order equations, general and particular solutions, linear and nonlinear
