--- a/_all-courses/ma261.md
+++ b/_all-courses/ma261.md
@@ -1,6 +1,6 @@
 ---
 title: Probability Models
-code: MA 261
+code: Ma 261
 ---
 
 Sample spaces, events, probability, discrete and continuous random variables,
