--- a/_all-courses/ma278.md
+++ b/_all-courses/ma278.md
@@ -1,6 +1,6 @@
 ---
 title: Introduction to Dynamical Systems Theory
-code: MA 278
+code: Ma 278
 ---
 The course introduces basic mathematical techniques to understand qualitatively
 the long-term behaviour of systems evolving in time. Most of the phenomena
