--- a/_all-courses/ma313.md
+++ b/_all-courses/ma313.md
@@ -1,6 +1,6 @@
 ---
 title: Algebraic Number Theory
-code: MA 313
+code: Ma 313
 ---
 Algebraic preliminaries: Algebraic field extensions: Normal, separable and
 Galois extensions. Euclidean rings, principal ideal domains and factorial
@@ -27,7 +27,7 @@ Recommended books
 PREREQUISITES:
 
 
-* Linear algebra (MA 219 or equivalent)
-* Basic algebra: Groups, rings, modules (MA 212 or equivalent), and algebraic
+* Linear algebra (Ma 219 or equivalent)
+* Basic algebra: Groups, rings, modules (Ma 212 or equivalent), and algebraic
   field extensions
 
