--- a/_all-courses/ma327.md
+++ b/_all-courses/ma327.md
@@ -1,6 +1,6 @@
 ---
 title: Topics in Analysis
-code: MA 327
+code: Ma 327
 ---
 In this course we begin by stating many wonderful theorems in analysis and
 proceed to prove them one by one. In contrast to usual courses (where we learn
