--- a/_all-courses/ma332.md
+++ b/_all-courses/ma332.md
@@ -1,6 +1,6 @@
 ---
 title: Algebraic Topology
-code: MA 332
+code: Ma 332
 ---
 Homology :Singular homology, excision, Mayer-Vietoris theorem, acyclic models,
 CW-complexes, simplicial and cellular homology, homology with coefficients./p>
