--- a/_all-courses/ma351.md
+++ b/_all-courses/ma351.md
@@ -1,6 +1,6 @@
 ---
 title: Modular Forms
-code: MA 351
+code: Ma 351
 ---
 
 Holomorphic Modular forms: motivation and introduction, Eisentein series, cusp
