--- a/_all-courses/ma361.md
+++ b/_all-courses/ma361.md
@@ -1,6 +1,6 @@
 ---
 title: Probability Theory
-code: MA 361
+code: Ma 361
 ---
 
 Probability measures and randown variables, pi and  lambda systems,
