--- a/_all-courses/ma371.md
+++ b/_all-courses/ma371.md
@@ -1,6 +1,6 @@
 ---
 title: Control and Homogenization
-code: MA 371
+code: Ma 371
 ---
 Prerequisites:Sobolev spaces, Elliptic boundary value problems, Heat and wave
 equations, Variational formulation and semigroup theory.
