--- a/_all-courses/ma380.md
+++ b/_all-courses/ma380.md
@@ -1,6 +1,6 @@
 ---
 title: Introduction to Complex Dynamics
-code: MA 380
+code: Ma 380
 ---
 The dynamics alluded to by the title of the course refers to dynamical systems
 that arise from iterating a holomorphic self-map of a complex manifold. In this
