--- a/_all-courses/ma340.md
+++ b/_all-courses/ma340.md
@@ -1,6 +1,6 @@
 ---
 title: Advanced Functional Analysis
-code: MA 340
+code: Ma 340
 ---
 Banach algebras, Gelfand theory, C* - algebras the GNS construction, spectral
 theorem for normal operators, Fredholm operators. The L-infinity functional
