--- a/_all-courses/ma383.md
+++ b/_all-courses/ma383.md
@@ -1,6 +1,6 @@
 ---
 title: Introduction to Minimal Surfaces
-code: MA 383
+code: Ma 383
 ---
 Serre-Frenet formula for curves, Parametric surfaces, Isothermal parameters,
 Gauss Map, Gaussian Curvature, Mean curvature, Area functional etc.
