--- a/_all-courses/ma390.md
+++ b/_all-courses/ma390.md
@@ -1,6 +1,6 @@
 ---
 title: Percolation and Random Graphs
-code: MA 390
+code: Ma 390
 ---
 Discrete parameter martingales, branching process, percolation on graphs,
 random graphs, random walks on graphs, interacting particle systems.
