--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -437,7 +437,7 @@ MRREVIEWER = {Zi Qiu Yun},
        DOI = {10.1007/s13226-016-0197-0},
        URL = {http://dx.doi.org/10.1007/s13226-016-0197-0},
 }
-	
+
 
 @article {MR3572350,
     AUTHOR = {Kabiraj, Arpan},
@@ -5353,7 +5353,7 @@ MRREVIEWER = {Joseph A. Ball},
 
 @article {MR2722794,
     AUTHOR = {Tao, Terence and Vu, Van},
-     TITLE = {Random matrices: universality of {ESD}s and the circular law},
+     TITLE = {Random matrices: universality of {ESD}s and the circular law (with an appendix by Manjunath Krishnapur)},
       NOTE = {With an appendix by Manjunath Krishnapur},
    JOURNAL = {Ann. Probab.},
   FJOURNAL = {The Annals of Probability},
