--- a/_all-courses/ma338.md
+++ b/_all-courses/ma338.md
@@ -3,16 +3,14 @@ code: Ma 338
 title: Differential Manifolds and Lie Group
 ---
 
-Differentiable manifolds, differentiable maps and tangent spaces, regular values and Sard's
-theorem, submersions and immersions, vector fields and flows, exponential map, Frobenius
-theorem, Lie groups and Lie algebras, exponential map , Homogenous spaces, tensors and
+Differentiable manifolds, differentiable maps, regular values and Sard's
+theorem, submersions and immersions, tangent and cotangent bundles as examples of vector bundles, vector fields and flows, exponential map, Frobenius theorem, Lie groups and Lie algebras, exponential map , tensors and
 differential forms, exterior algebra, Lie derivative, Orientable manifolds, integration on manifolds and
 Stokes Theorem . Covariant differentiation, Riemannian metrics, Levi-Civita connection, Curvature
 and parallel transport, spaces of constant curvature.
-Vamsi Pritham Pingali
 
 References:
-
+* M. Spivak : A comprehensive introduction to differential geometry (Vol. 1) - 3rd Ed, *Publish or Perish, Inc., Houston, Texas* 2005
 * S. Kumaresan: A course in differential geometry and Lie groups, Texts and Readings in Mathematics, 22. *Hindustan Book Agency, New Delhi,* 2002
 * F. Warner: Foundations of differentiable manifolds and Lie groups , Graduate Texts in Mathematics, 94. *Springer-Verlag, New York-Berlin,* 1983
 * J. Lee: Introduction to smooth manifolds , Graduate Texts in Mathematics, 218. *Springer, New York,* 2013
