--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -2852,7 +2852,7 @@ MRREVIEWER = {Vivek S. Borkar},
 
 @article {MR3119211,
     AUTHOR = {Onn, Uri and Singla, Pooja},
-     TITLE = {On the unramified principal series of {$\roman{GL}(3)$} over
+     TITLE = {On the unramified principal series of {$\mathrm{GL}(3)$} over
               non-{A}rchimedean local fields},
    JOURNAL = {J. Algebra},
   FJOURNAL = {Journal of Algebra},
