--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -1,6 +1,10 @@
 ---
 title: Multivariable Calculus
-code: Ma 200
+code: MA 200
+books: 
+1. Rudin, W. 1986 Principles of Mathematical Analysis, McGraw-Hill.
+2. B. V. Limaye and S. Ghorpade: A course in Calculus and Real Analysis, Springer
+3. Spivak, M., Calculus on Manifolds, W.A. Benjamin, co., 1965.
 ---
 
 
@@ -8,8 +12,3 @@ Functions on $R^n$ , directional derivatives, total derivative, higher order der
 Integration on $R^n$ , differential forms on  $R^n$ , closed and exact forms. Green’s theorem, Stokes’ theorem and the Divergence theorem.
 
 
-#### Suggested Books:
-
-1. Rudin, W. 1986 Principles of Mathematical Analysis, McGraw-Hill.
-2. B. V. Limaye and S. Ghorpade: A course in Calculus and Real Analysis, Springer
-3. Spivak, M., Calculus on Manifolds, W.A. Benjamin, co., 1965.
