--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -1,16 +1,12 @@
 ---
 title: Multivariable Calculus
 code: MA 200
-books: Rudin
+books: 
+1. Rudin, W. 1986 Principles of Mathematical Analysis, McGraw-Hill.
+2. B. V. Limaye and S. Ghorpade, A course in Calculus and Real Analysis, Springer
+3. Spivak, M., Calculus on Manifolds, W.A. Benjamin, co., 1965.
 ---
 
 
 Functions on $R^n$ , directional derivatives, total derivative, higher order derivatives and Taylor series.The inverse and implicit function theorem,
 Integration on $R^n$ , differential forms on  $R^n$ , closed and exact forms. Green’s theorem, Stokes’ theorem and the Divergence theorem.
-
-
-### Suggested Books :
-
-1. Rudin, W. 1986 Principles of Mathematical Analysis, McGraw-Hill.
-2. B. V. Limaye and S. Ghorpade, A course in Calculus and Real Analysis, Springer
-3. Spivak, M., Calculus on Manifolds, W.A. Benjamin, co., 1965.
