--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -1,7 +1,7 @@
 ---
 title: Multivariable Calculus
 code: MA 200
-books: Rudin
+books: 1. Rudin, W. 1986 Principles of Mathematical Analysis, McGraw-Hill.
 ---
 
 
