--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -8,6 +8,9 @@ Functions on $R^n$ , directional derivatives, total derivative, higher order der
 Integration on $R^n$ , differential forms on  $R^n$ , closed and exact forms. Green’s theorem, Stokes’ theorem and the Divergence theorem.
 
 Suggested books :
-1) Rudin, W. 1986 Principles of Mathematical Analysis, McGraw-Hill..
-2) B. V. Limaye and S. Ghorpade, A course in Calculus and Real Analysis, Springer..
-3) Spivak, M., Calculus on Manifolds, W.A. Benjamin, co., 1965
+
+1) Rudin, W. 1986 Principles of Mathematical Analysis, McGraw-Hill.
+
+2) B. V. Limaye and S. Ghorpade, A course in Calculus and Real Analysis, Springer.
+
+3) Spivak, M., Calculus on Manifolds, W.A. Benjamin, co., 1965.
