mock course layout
mock course books

--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -1,6 +1,14 @@
 ---
 title: Multivariable Calculus
 code: MA 200
+books:
+  - author: Rudin
+    title: Principles of Mathematical Analysis
+    publ: McGraw-Hill 1986 
+  - author: Someone
+    title: Something
+  - title: Something Else
+    author: Someone Else
 ---
 
 
