--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -5,10 +5,12 @@ books:
   - author: Rudin
     title: Principles of Mathematical Analysis
     publ: McGraw-Hill 1986 
-  - author: Someone
-    title: Something
-  - title: Something Else
-    author: Someone Else
+  - author: B. V. Limaye and S. Ghorpade
+    title: A course in Calculus and Real Analysis
+    publ: Springer
+  - title:  Calculus on Manifolds
+    author: Spivak, M.
+    publ: W.A. Benjamin, co., 1965
 ---
 
 
