ma200 data corrected, course template tweaks.

--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -4,21 +4,15 @@ code: MA 200
 books:
   - author: Rudin
     title: Principles of Mathematical Analysis
-    publ: McGraw-Hill 1986 
-  - author: Someone
-    title: Something
-  - title: Something Else
-    author: Someone Else
+    publ: McGraw-Hill 1986
+  - author: B. V. Limaye and S. Ghorpade
+    title: A course in Calculus and Real Analysis
+    publ: Springer-Verlag
+  - title: Calculus on Manifolds
+    author: Spivak, M.
+    publ: W.A. Benjamin, co., 1965
 ---
 
 
 Functions on $R^n$ , directional derivatives, total derivative, higher order derivatives and Taylor series.The inverse and implicit function theorem,
 Integration on $R^n$ , differential forms on  $R^n$ , closed and exact forms. Green’s theorem, Stokes’ theorem and the Divergence theorem.
-
-Suggested books :
-
-1) Rudin, W. 1986 Principles of Mathematical Analysis, McGraw-Hill.
-
-2) B. V. Limaye and S. Ghorpade, A course in Calculus and Real Analysis, Springer.
-
-3) Spivak, M., Calculus on Manifolds, W.A. Benjamin, co., 1965.
