--- a/_all-courses/ma210.md
+++ b/_all-courses/ma210.md
@@ -1,6 +1,19 @@
 ---
 title: Algebra I
-code: Ma 210
+code: MA 210
+books:
+  - author: Artin    
+    title: Algebra
+    publ: M. Prentice-Hall of India, 1994
+  - author: Dummit, D. S. and Foote, R. M.
+    title: Abstract Algebra
+    publ: McGraw-Hill, 1986      
+  - author: Herstein, I. N.
+    title: Topics in Algebra
+    publ: John Wiley & Sons, 1995
+  - author: Lang, S.
+    title: Algebra (3rd Ed.)
+    publ: Springer, 2002
 ---
 Part A
 
@@ -23,9 +36,3 @@ Part B
 * Fields: basic definitions and examples, algebraic & trancendental numbers;
 * Finite fields, characteristic, the order of a finite field.
 
-Recommended Books
-
-* Artin, M., Algebra, Prentice-Hall of India, 1994.
-* Dummit, D. S. and Foote, R. M., Abstract Algebra, John Wiley & Sons, 2001.
-* Herstein, I. N., Topics in Algebra, John Wiley & Sons, 1995.
-* Lang, S., Algebra, 3rd editiom. Springer, 2002.
