--- a/_all-courses/ma212.md
+++ b/_all-courses/ma212.md
@@ -1,6 +1,19 @@
 ---
 title: Algebra I
 code: Ma 212
+books:
+- author: Fraleigh, P.A. 
+  title: First course in Abstract Algebra
+  publ: Addison-Wesley / Narosa, 1992
+- author: Herstein, I. N.  
+  title: Topics in Algebra
+  publ: Vikas Publications, 1972
+- author: Artin, M.  
+  title: Algebra
+  publ: Prentice_Hall of India, 1994 
+- author: Jacobson, N.   
+  title: Basic Algebra  I, II
+  publ: Hindustan Pub. Co., 1993  
 ---
 
 Groups: Groups, Subgroups, Normal subgroups, Quotient groups, Group homomorphisms, Isomorphisms, Isomorphism theorems, Direct products, Finitely generated abelian groups, Group actions, Permutation groups, Sylow's theorems, Free abelian groups.
@@ -9,10 +22,3 @@ Rings: Rings, Subrings, Ideals, Quotient rings, Ring homomorphisms, Integral dom
 
 Modules: Modules, Submodules, Free modules, Rank of a module, Module homomorphisms.
 
-
-### Books
-
-* Fraleigh, P. A.., First course in Abstract Algebra, Addison-Wesley / Narosa, 1992
-* Herstein, I. N., Topics in Algebra, Vikas Publications, 1972.
-* Artin, M., Algebra, Prentice_Hall of India, 1994.
-* Jacobson, N., Basic Algebra  I, II, Hindustan Pub. Co., 1993.
