--- a/_all-courses/ma213.md
+++ b/_all-courses/ma213.md
@@ -1,6 +1,19 @@
 ---
 title: Algebra II
 code: Ma 213
+books:
+- author: Artin, M.  
+  title: Algebra
+  publ: Prentice_Hall of India, 1994 
+ - author: Dummit, D. S. and Foote, R. M.
+   title: Abstract Algebra
+   publ: McGraw-Hill, 1986 
+ - author: Lang, S.
+   title: Algebra (3rd Ed.)
+   publ: Springer, 2002
+ - author: Atiyah, M. and MacDonald, R.
+   title: Introduction to Commutative Algebra
+   publ: Addison-Wesley(or any reprint)
 ---
 Part A
 
@@ -19,12 +32,6 @@ Part B
 * The Primitive Element Theorem.
 
  
-Recommended books
 
-* Artin, M., Algebra, Prentice-Hall of India, 1994.
-* Dummit, D. S. and Foote, R. M., Abstract Algebra, John Wiley & Sons, 2001.
-* Lang, S., Algebra, 3rd editiom. Springer, 2002.
-* Atiyah, M. and MacDonald, R., Introduction to Commutative Algebra, Addison-
-  Wesley(or any reprint).
    
 
