--- a/_all-courses/ma219.md
+++ b/_all-courses/ma219.md
@@ -1,6 +1,16 @@
 ---
 title: Linear Algebra
-code: Ma 219
+code: MA 219
+books:
+  - author: Artin, M.  
+    title: Algebra
+    publ: Prentice_Hall of India, 1994 
+  - author: Halmos, P.
+    title: Finite dimensional vector spaces
+    publ: Springer-Verlag (UTM), 1987 
+  - author: Hoffman, K. and Kunze, R.
+    title: Linear Algebra (2nd Ed.)
+    publ: Prentice-Hall of India, 1992
 ---
 LINEAR ALGEBRA
 
@@ -18,9 +28,3 @@ Bilinear forms: Symmetric, skew symmetric and Hermitian forms, Sylvester’s law
 of inertia, Spectral theorem for the Hermitian and normal operators on finite
 dimensional vector spaces.
  
-Recommended Books
-
-* Artin, M., Algebra, Prentice-Hall of India, 1994.
-* Halmos, P., Finite dimensional vector spaces, Springer-Verlag (UTM), 1987.
-* Hoffman, K. and Kunze, R., Linear Algebra, 2nd edition, Prentice-Hall of
-  India, 1992
