--- a/_all-courses/ma220.md
+++ b/_all-courses/ma220.md
@@ -1,9 +1,9 @@
 ---
-code: Ma 220
+code: MA 220
 title: Representation theory of Finite groups
 ---
 Representation of finite groups, irreducible representations, complete reducibility, Schur's lemma,
 characters, orthogonality, class functions, regular representations and induced representation, the
 group algebra.
 
-**Linear groups:** Representation of the group $SU(2)$
+Linear groups: Representation of the group $SU(2)$
