--- a/_all-courses/ma221.md
+++ b/_all-courses/ma221.md
@@ -1,6 +1,13 @@
 ---
-title: 'Analysis I : Real Analysis'
-code: Ma 221
+title: Analysis I : Real Analysis
+code: MA 221
+books:
+  - author: Rudin, W.  
+    title: Principles of Mathematical Analysis
+    publ: McGraw-Hill, 1985 
+  - author: Apostol, T. M. 
+    title: Mathematical Analysis
+    publ: Narosa, 1987
 ---
 Construction of the field of real numbers and the least upper-bound property.
 Review of sets, countable & uncountable sets. Metric Spaces: topological
@@ -14,7 +21,3 @@ dimensions: motivations, the total derivative, and basic theorems. Partial
 derivatives, characterization of continuously-differentiable functions. Higher-
 order derivatives.
  
-Recommended Books
-
-* Rudin, W., Principles of Mathematical Analysis, McGraw-Hill, 1985.
-* Apostol, T. M., Mathematical Analysis, Narosa, 1987.
