--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -4,7 +4,7 @@ code: MA 200
 books:
   - author: Rudin
     title: Principles of Mathematical Analysis
-    publ: McGraw-Hill 1986
+    publ: McGraw-Hill, 1986
   - author: B. V. Limaye and S. Ghorpade
     title: A course in Calculus and Real Analysis
     publ: Springer
