--- a/_all-courses/ma221.md
+++ b/_all-courses/ma221.md
@@ -2,9 +2,9 @@
 title: Analysis I : Real Analysis
 code: MA 221
 books:
-  - author: Rudin, W.  
+  - author: Rudin
     title: Principles of Mathematical Analysis
-    publ: McGraw-Hill, 1985 
+    publ: McGraw-Hill, 1986
   - author: Apostol, T. M. 
     title: Mathematical Analysis
     publ: Narosa, 1987
