--- a/_all-courses/ma222.md
+++ b/_all-courses/ma222.md
@@ -1,6 +1,15 @@
 ---
-title: 'ANALYSIS II: MEASURE AND INTEGRATION'
-code: Ma 222
+title: Analysis II - Measure and Integration
+code: MA 222
+  - author: Royden, H. L. 
+    title: Real Analysis
+    publ: Macmillan, 1988
+  - author: Folland, G.B.
+    title: Real Analysis: Modern Techniques and their Applications (2nd Ed.)
+    publ: Wiley
+  - author:  Hewitt, E. and Stromberg, K.     
+    title: Real and Abstract Analysis
+    publ: Springer, 1969
 ---
 Construction of Lebesgue measure, Measurable functions, Lebesgue integration,
 Abstract measure and abstract integration, Monotone convergence theorem,
@@ -10,10 +19,3 @@ measurable functions, Fubini's theorem, Signed measures and Randon-Nikodym
 theorem, Lp-spaces, Characterization of continuous linear functionals on Lp -
 spaces, Change of variables, Complex measures, Riesz representation theorem.
  
-Recommended books
-
-* Royden, H. L., Real Analysis, Macmillan, 1988.
-* Folland, G.B., Real Analysis: Modern Techniques and their Applications, 2nd
-  edition, Wiley.
-* Hewitt, E. and Stromberg, K., Real and Abstract Analysis, Springer, 1969.
-
