--- a/_all-courses/ma222.md
+++ b/_all-courses/ma222.md
@@ -1,6 +1,7 @@
 ---
 title: Analysis II - Measure and Integration
 code: MA 222
+books:
   - author: Royden, H. L. 
     title: Real Analysis
     publ: Macmillan, 1988
