--- a/_all-courses/ma222.md
+++ b/_all-courses/ma222.md
@@ -6,7 +6,7 @@ books:
     title: Real Analysis
     publ: Macmillan, 1988
   - author: Folland, G.B.
-    title: Real Analysis: Modern Techniques and their Applications (2nd Ed.)
+    title: 'Real Analysis: Modern Techniques and their Applications (2nd Ed.)'
     publ: Wiley
   - author:  Hewitt, E. and Stromberg, K.     
     title: Real and Abstract Analysis
