--- a/_all-courses/ma223.md
+++ b/_all-courses/ma223.md
@@ -1,6 +1,16 @@
 ---
 title: Functional Analysis
-code: Ma 223
+code: MA 223
+books:
+  - author: Rudin
+    title: Functional Anaysis (2nd Ed.)
+    publ: McGraw-Hill, 2006
+  - author: Yosida, K.
+    title: Functional Anaysis (4th Edition)
+    publ: Narosa, 1974
+  - title:  First Course in Functional Analysis
+    author: Goffman, C. and Pedrick, G.
+    publ: Prentice-Hall of India, 1995
 ---
 Basic topological concepts, Metric spaces, Normed linear spaces, Banach spaces,
 Bounded linear functionals and dual spaces,Hahn-Banach  theorem. Bounded
@@ -8,9 +18,4 @@ linear  operators, open-mapping theorem, closed graph theorem. The Banach-
 Steinhaus theorem. Hilbert spaces, Riesz representation theorem, orthogonal
 complements,  bounded operators on  a  Hilbert  space up to (and including) the
 spectral  theorem  for compact,   self-adjoint  operators.
-Recommended Books
 
-* Goffman, C. and Pedrick, G., First Course in Functional Analysis, Prentice-
-  Hall of India, 1995.
-* Rudin, W., Functional Anaysis, 2nd Edition, Tata McGraw-Hill, 2006
-* Yosida, K., Functional Anaysis, 4th Edition, Narosa,1974
