--- a/_all-courses/ma224.md
+++ b/_all-courses/ma224.md
@@ -1,6 +1,7 @@
 ---
 title: Complex Analysis
 code: MA 224
+books:
   - author: Ahlfors, L. V.
     title: Complex Analysis
     publ: McGraw-Hill, 1979
