--- a/_all-courses/ma229.md
+++ b/_all-courses/ma229.md
@@ -1,6 +1,13 @@
 ---
 title: Calculus on Manifolds
-code: Ma 229
+code: MA 229
+books:
+  - author: Spivak, M. 
+    title: Calculus on Manifolds
+    publ: W.A. Benjamin, co., 1965
+  - author: Hirsh, M.W. 
+    title: Differential Topology
+    publ: Springer-Verlag, 1997
 ---
 Functions of several variables, Directional derivatives and continuity, total
 derivative, mean value theorem for differentiable functions, Taylor's formula.
@@ -8,8 +15,4 @@ The inverse function and implicit function theorems, extreme of functions of
 several variables and Lagrange multipliers. Sard's theorem.
 Manifolds: Definitions and examples, vector fields and differential forms on
 manifolds, Stokes theorem.
-Recommended books
-
-* Spivak, M., Calculus on Manifolds, W.A. Benjamin, co., 1965.
-* Hirsh, M.W., Differnential Topology, Springer-Verlag, 1997.
 
