--- a/_all-courses/ma231.md
+++ b/_all-courses/ma231.md
@@ -1,6 +1,17 @@
 ---
 title: Topology
-code: Ma 231
+code: MA 231
+books:
+  - author: Armstrong, M. A., Basic Topology, Springer (India), 2004.
+    title: Functional Anaysis (2nd Ed.)
+    publ: McGraw-Hill, 2006
+  - author: Munkres, K. R., Topology,Pearson Education, 2005
+    title: Functional Anaysis (4th Edition)
+    publ: Narosa, 1974
+  - title: Elementary
+  Topology: Problem Textbook
+    author: Viro, O.Ya., Ivanov, O.A., Netsvetaev, N., and Kharlamov, V.M.
+    publ: AMS, 2008
 ---
 
 Point-set topology: Open and closed sets,  continuous functions, Metric
@@ -12,9 +23,3 @@ The fundamental group: Homotopic maps, Construction of the fundamental group,
 Fundamental group of the circle, Homotopy type, Brouwer's fixed-point theorem,
 Separation of the plane.
  
-Recommended Books
-
-* Armstrong, M. A., Basic Topology, Springer (India), 2004.
-* Munkres, K. R., Topology,Pearson Education, 2005. 
-* Viro, O.Ya., Ivanov, O.A., Netsvetaev, N., and Kharlamov, V.M., Elementary
-  Topology: Problem Textbook, AMS, 2008
