--- a/_all-courses/ma231.md
+++ b/_all-courses/ma231.md
@@ -8,8 +8,7 @@ books:
   - author: Munkres, K. R., Topology,Pearson Education, 2005
     title: Functional Anaysis (4th Edition)
     publ: Narosa, 1974
-  - title: Elementary
-  Topology: Problem Textbook
+  - title: 'Elementary Topology: Problem Textbook'
     author: Viro, O.Ya., Ivanov, O.A., Netsvetaev, N., and Kharlamov, V.M.
     publ: AMS, 2008
 ---
