--- a/_all-courses/ma232.md
+++ b/_all-courses/ma232.md
@@ -1,11 +1,11 @@
 ---
-code: Ma 232
+code: MA 232
 title: Introduction to algebraic topology
 ---
 
-**The fundamental group:** Homotopy of maps, multiplication of paths, the fundamental group, induced
+The fundamental group: Homotopy of maps, multiplication of paths, the fundamental group, induced
 homomorphisms, the fundamental group of the circle, covering spaces, lifting theorems, the
 universal covering space, Seifert-van Kampen theorem, applications. Simplicial and singular
 
-**Homology:** Simplicial complexes, chain complexes, definitions of the simplicial and singular homology
+Homology: Simplicial complexes, chain complexes, definitions of the simplicial and singular homology
 groups, properties of homology groups, applications
