--- a/_all-courses/ma241.md
+++ b/_all-courses/ma241.md
@@ -1,6 +1,16 @@
 ---
 title: Ordinary Differential Equations
-code: Ma 241
+code: MA 241
+books:
+  - author: Hartman
+    title: Ordinary Differential Equations
+    publ: P. Birkhaeuser, 1982
+  - author: Coddington, E. A. and Levinson, N. 
+    title: Theory of Ordinary Differential Equations
+    publ: Tata McGraw-Hill, 1972
+  - author: Perko, L. 
+    title: Differential Equations and Dynamical Systems
+    publ: Springer-Verlag, 1991
 ---
 Basics concepts:Introduction and examples through physical models, First and
 second order equations, general and particular solutions, linear and nonlinear
@@ -11,11 +21,4 @@ Linear system:The fundamental matrix, stability of equilibrium points, Phase-
 plane analysis, Sturm-Liouvile theory .
 Nonlinear system and their stability:Lyapunov's method, Non-linear Perturbation
 of linear systems, Periodic solutions and Poincare- Bendixson theorem.
-Recommended books
-
-* Hartman, P., Ordinary Differential Equations, Birkhaeuser, 1982. 
-* Coddington, E. A. and Levinson, N., Theory of Ordinary Differential
-  Equations, Tata McGraw-Hill 1972.
-* Perko, L., Differential Equations and Dynamical Systems, Springer-Verlag,
-  1991.
 
