--- a/_all-courses/ma242.md
+++ b/_all-courses/ma242.md
@@ -1,15 +1,20 @@
 ---
 title: Partial Differential Equations
-code: Ma 242
+code: MA 242
+books:
+  - author: Garabedian, P. R. 
+    title: Partial Differential Equations
+    publ: John Wiley and Sons, 1964
+  - author: Prasad. P. and Ravindran, R. 
+    title: Partial Differential Equations
+    publ: Wiley Eastern, 1985
+  - author: Renardy, M. and Rogers, R. C. 
+    title: An Introduction to Partial Differential Equations
+    publ: Springer-Verlag, 1992
+  - author: Fritz John
+    title: Partial Differential Equations
+    publ: Springer (International Students Edition), 1971
 ---
 
 First order partial differential equation and Hamilton-Jacobi equations; Cauchy problem and classification of second order equations, Holmgren’s uniqueness theorem; Laplace equation; Diffusion equation; Wave equation; Some methods of solutions, Variable separable method.
 
-
-
-### Books
-
-* Garabedian, P. R., Partial Differential Equations, John Wiley and Sons, 1964.
-* Prasad. P. and Ravindran, R., Partial Differential Equations, Wiley Eastern, 1985.
-* Renardy, M. and Rogers, R. C., An Introduction to Partial Differential Equations, Springer-Verlag, 1992.
-* Fritz John, Partial differential Equations, Springer (International Students Edition), 1971.
