--- a/_all-courses/ma261.md
+++ b/_all-courses/ma261.md
@@ -1,6 +1,13 @@
 ---
 title: Probability Models
-code: Ma 261
+code: MA 261
+books:
+  - author: Ross, S.M.  
+    title: Introduction to Probability Models
+    publ: Academic Press 1993
+  - author: Taylor, H.M., and Karlin, S.
+    title: An Introduction to Stochastic Modelling
+    publ: Academic Press, 1994
 ---
 
 Sample spaces, events, probability, discrete and continuous random variables,
@@ -8,8 +15,3 @@ Conditioning and independence, Bayes'  formula, moments and moment generating
 function, characteristic function, laws of large numbers, central limit
 theorem, Markov chains, Poisson processes.
  
-Recommended Books
-
-* Ross, S.M., Introduction to Probability Models,  Academic Press 1993.
-* Taylor, H.M., and Karlin, S., An Introduction to Stochastic Modelling,
-  Academic Press, 1994.
