--- a/_all-courses/ma278.md
+++ b/_all-courses/ma278.md
@@ -1,6 +1,19 @@
 ---
 title: Introduction to Dynamical Systems Theory
-code: Ma 278
+code: MA 278
+books:
+  - author: S. Strogatz
+    title: 'Nonlinear Dynamics and Chaos: with Applications to physics, Biology, Chemistry, and Engineering'
+    publ: Westview, 1994
+  - author: S. Wiggins  
+    title: Introduction to applied nonlinear dynamics & chaos
+    publ: Springer-Verlag, 2003
+  - author: K. Alligood, T. Sauer, & James A.Yorke
+    title: 'Chaos: An Introduction to Dynamical Systems'
+    publ: Springer-Verlag, 1996.
+  - author: M.Tabor 
+    title: Chaos and Integrability in Non-linear Dynamics
+    publ: 1989
 ---
 The course introduces basic mathematical techniques to understand qualitatively
 the long-term behaviour of systems evolving in time. Most of the phenomena
@@ -12,12 +25,4 @@ behaviour, to a certain extent. Dynamical systems theory has wide applications
 in the study of complex systems, including physical & biological systems,
 engineering, aerodynamics, economics, etc.
  
-Recommended books
-
-* S. Strogatz, Nonlinear Dynamics and Chaos: with Applications to physics,
-  Biology, Chemistry, and Engineering, Westview, 1994
-* S. Wiggins, Introduction to applied nonlinear dynamics & chaos, Springer-
-  Verlag, 2003
-* K. Alligood, T. Sauer, & James A.Yorke, Chaos: An Introduction to Dynamical
-  Systems, Springer-Verlag, 1996.
-* M.Tabor, Chaos and Integrability in Non-linear Dynamics, 1989.
+ 
