--- a/_all-courses/ma313.md
+++ b/_all-courses/ma313.md
@@ -1,6 +1,29 @@
 ---
 title: Algebraic Number Theory
-code: Ma 313
+code: MA 313
+books:
+  - author: Artin, E. 
+    title: Galois Theory
+    publ: University of Notre Dame Press, 1944
+  - author: Borevich, Z. and Shafarevich, I.
+    title: Number Theory
+    publ: Academic Press, New York, 1966
+  - author: Cassels, J.W. and Frohlich, A. 
+    title: Algebraic Number Theory
+    publ: Academic Press, New York, 1948
+  - author: Hasse, H.  
+    title: Zahlentheorie
+    publ: Akademie Verlag, Berlin, 1949
+  - author: Hecke, E.  
+    title: Vorlesungen uber die Theorie der algebraischen Zahlen
+    publ: Chelsea, New York, 1948
+  - author: Samuel, P.   
+    title: Algebraic Theory of Numbers
+    publ: Hermann, 1970
+prereqs: 
+  - Linear algebra (Ma 219 or equivalent)
+  - Basic algebra: Groups, rings, modules (Ma 212 or equivalent), and algebraic
+  field extensions
 ---
 Algebraic preliminaries: Algebraic field extensions: Normal, separable and
 Galois extensions. Euclidean rings, principal ideal domains and factorial
@@ -12,22 +35,4 @@ Class numbers:Lattices and Minkowski theory. Finiteness of class number.
 Dirichlet's unit theorem.
 Ramification Theory: Discriminants.
 Applications to cryptography.
-Recommended books
-
-* Artin, E., Galois Theory, University of Notre Dame Press, 1944
-* Borevich, Z. and Shafarevich, I., Number Theory, Academic Press, New York,
-  1966.
-* Cassels, J.W. and Frohlich, A., Algebraic Number Theory, Academic Press, New
-  York, 1948
-* Hasse, H., Zahlentheorie, Akademie Verlag, Berlin, 1949.
-* Hecke, E., Vorlesungen uber die Theorie der algebraischen Zahlen, Chelsea,
-  New York, 1948.
-* Samuel, P., Algebraic Theory of Numbers, Hermann, 1970
-
-PREREQUISITES:
-
-
-* Linear algebra (Ma 219 or equivalent)
-* Basic algebra: Groups, rings, modules (Ma 212 or equivalent), and algebraic
-  field extensions
 
