--- a/_all-courses/ma313.md
+++ b/_all-courses/ma313.md
@@ -21,9 +21,9 @@ books:
     title: Algebraic Theory of Numbers
     publ: Hermann, 1970
 prereqs: 
-  - Linear algebra (Ma 219 or equivalent)
-  - Basic algebra: Groups, rings, modules (Ma 212 or equivalent), and algebraic
-  field extensions
+  - Linear algebra (MA 219 or equivalent)
+  - 'Basic algebra : Groups, rings, modules (MA 212 or equivalent), and algebraic
+  field extensions'
 ---
 Algebraic preliminaries: Algebraic field extensions: Normal, separable and
 Galois extensions. Euclidean rings, principal ideal domains and factorial
